# PoliTechAPI/pt-api/src/main/java/ru/pt/api/service/payment/InstallmetService.java
@@ -1,6 +1,0 @@
-package ru.pt.api.service.payment;
-
-public interface InstallmetService {
-
-// calculate installment plan for policy by premium and inslamentType? return array of installments    
-}
