# docs/api/openapi/policy-api.yaml
@@ -7,7 +7,7 @@ info:
  
 servers:
   - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/insur/PoliTechPublic/1.0.0
+    url: http://185.130.212.179:8080/api/v1/demo
 
 tags:
   - politech
@@ -65,7 +65,7 @@ paths:
         '503':
           $ref: '#/components/responses/Http-503'
 
-  /sales/v3/policies:
+  /sales/policies:
     post:
       tags:
         - politech
@@ -169,7 +169,7 @@ paths:
   /sales/v3/policies/{policy_nr}:
     get:
       tags:
-        - poliTech
+        - politech
       description: |
         Получить данные по договору страхования.
       parameters:
@@ -191,7 +191,7 @@ paths:
  
     put:
       tags:
-        - policy
+        - politech
       description: |
         Изменить данные по версии договора. Менять данные можно только по договору в статусе WIP. 
         Иначе нужно создавать допник.
@@ -218,7 +218,7 @@ paths:
         '503':
           $ref: '#/components/responses/Http-503'
  
-  /sales/v3/policies/{policy_nr}/files:
+  /sales/policies/{policy_nr}/files:
     get:
       tags:
         - politech
@@ -252,7 +252,7 @@ paths:
  
     post:
       tags:
-        - mortgage
+        - politech
       description: добавить файл к договору.
  
       parameters:
@@ -276,7 +276,7 @@ paths:
         '401':
           $ref: '#/components/responses/Http-401'
   
-  /sales/v3/policies/{policy_nr}/installments/{installment_nr}:
+  /sales/policies/{policy_nr}/installments/{installment_nr}:
     get:
       tags:
         - politech
